--- a/TP2/Project.toml
+++ b/TP2/Project.toml
@@ -4,5 +4,6 @@ authors = ["Nicopiwi <nikorozenberg@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
