--- a/TP2/Project.toml
+++ b/TP2/Project.toml
@@ -7,3 +7,6 @@ version = "0.1.0"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+QuartzImageIO = "dca85d43-d64c-5e67-8c65-017450d5d020"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
